2017-06-29  Nathan Sidwell  <nathan@acm.org>

	Whitespace cleanups.
	* call.c (name_as_c_string): Move CONST_CAST to return.
	(build_new_method_call_1): Remove unneeded bracing.
	* class.c (include_empty_classes): Unbreak line.
	* constraint.cc (tsubst_check_constraint): Add space.
	* cp-tree.h (lang_decl_ns): Add comment.
	(PTRMEM_CST_MEMBER): Break line.
	* decl.c (grokfndecl): Add blank lines. Unbreak some others.
	(grokdeclarator): Remove lines, move declaration to first use.
	* decl2.c (decl_needed_p): Fix indentation.
	(c_parse_final_cleanups): Remove blank line.
	* method.c (implicitly_declare_fn): Move declaration to first use.
	* search.c (current_scope): Add blank lines.

2017-06-28  Jason Merrill  <jason@redhat.com>

	PR c++/72764 - ICE with invalid template typename.
	* decl.c (build_typename_type): No longer static.
	* tree.c (strip_typedefs): Use it instead of make_typename_type.

	PR c++/69300 - ICE with self-referential noexcept
	* pt.c (maybe_instantiate_noexcept): Check for recursion.

	PR c++/61022 - error with variadic template template parm
	* pt.c (convert_template_argument): Keep the TYPE_PACK_EXPANSION.

	PR c++/72801 - ICE with variadic partial specialization
	* pt.c (unify_pack_expansion): Use PACK_EXPANSION_EXTRA_ARGS.

	PR c++/55639 - partial specialization with ::template
	* parser.c (cp_parser_class_head): Handle ::template.

	PR c++/45976 - error with ::template in declarator.
	* pt.c (resolve_typename_type): Fix TEMPLATE_ID_EXPR handling.

	PR c++/54769 - wrong lookup of dependent template-name.
	* parser.c (cp_parser_template_name): Handle dependent object type.
	(cp_parser_nested_name_specifier_opt): Make template_keyword_p a
	parameter.
	(cp_parser_id_expression): Pass it.
	(cp_parser_diagnose_invalid_type_name): Handle TEMPLATE_ID_EXPR.

	* parser.c (cp_parser_template_id): Use the range location on the
	TEMPLATE_ID_EXPR.

	PR c++/81204 - parse error with dependent template-name